# sso

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/: clients.sql  login_tokens.sql  tokens.sql  users.sql
src/: main.rs
src/api/: clients.rs  mod.rs  users.rs
src/db/: mod.rs
src/frontend/: index.rs  login.rs  mod.rs  register.rs
static/: checkboxes.css  stylesheet.css  theme_toggle.js
templates/: error.html.hbs  index.html.hbs  logged_in.html.hbs  login.html.hbs  register.html.hbs
