[package]
name = "rocket_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.4"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "secrets", "uuid"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["postgres_pool"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[dependencies.postgres]
version = "0.19.1"
features = ["with-uuid-0_8"]

[dependencies.rust-argon2]
version = "0.8"